# prealloc

./: Cargo.toml  README.md
.github/workflows/: full.yml  quick-check.yml  quick.yml
config_macro/: Cargo.toml
config_macro/src/: lib.rs
config_macro_derive/: Cargo.toml
config_macro_derive/src/: lib.rs
main/: Cargo.toml  config.json
main/src/: main.rs
nostd-mingw/: Cargo.toml
nostd-mingw/src/: main.rs
nostd-msvc/: Cargo.toml  config.json
nostd-msvc/src/: main.rs
prealloc/: Cargo.toml
prealloc/examples/arrays/: config.json  main.rs
prealloc/examples/basic/: config.json  main.rs
prealloc/examples/sizes/: config.json  main.rs
prealloc/examples/sync/: config.json  main.rs
prealloc/src/: lib.rs
prealloc/tests/: mod.rs
prealloc/tests/nostd/: Cargo.toml
prealloc/tests/nostd/src/: lib.rs
prealloc/tests/prealloc_macro/: config.json  mod.rs
prealloc/tests/std/: Cargo.toml
prealloc/tests/std/src/: main.rs
prealloc_impl/: Cargo.toml
prealloc_impl/src/: lib.rs
std/: Cargo.toml  config.json
std/src/: main.rs
