[package]
name = "prealloc_impl"
version = "0.1.0"
authors = ["Borja García <debuti@gmail.com>"]
categories = ["development-tools"]
description = "."
edition = "2021"
keywords = ["macros"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
std = []
